objects/User.object
<CustomObject>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>AMERS</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>ASIA</fullName>
                <color>#CC6600</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Go_Live_Phase__c</fullName>
        <label>Go Live Phase</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSameDivision__c</fullName>
        <formula>Division =  $User.Division</formula>
        <label>IsSameDivision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDM_External_Id__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <description>Used to match users on upsert during deployment stage</description>
        <externalId>true</externalId>
        <label>MDM External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <description>Manager Value</description>
        <formula>Manager.FirstName &amp; &quot; &quot; &amp;  Manager.LastName</formula>
        <label>Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managers_Email__c</fullName>
        <label>Managers Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ResetUser__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reset User</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <description>Strategic Business Unit</description>
        <inlineHelpText>Strategic Business Unit</inlineHelpText>
        <label>SBU</label>
        <picklist>
            <picklistValues>
                <fullName>Specialist Technologies</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Id__c</fullName>
        <description>3 Character Site Id</description>
        <inlineHelpText>3 Character Site Id</inlineHelpText>
        <label>Site Id</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <description>User Role</description>
        <inlineHelpText>User Role</inlineHelpText>
        <label>User Role</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>All_Distribution_Mkt_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MARKETING_USER</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Distribution Marketing</value>
        </filters>
        <label>All Distribution Mkt Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Distribution_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Distribution</value>
        </filters>
        <label>All Distribution Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>RequiredManager</fullName>
        <active>false</active>
        <errorConditionFormula>ManagerId =&quot;&quot; &amp;&amp; IsActive=true</errorConditionFormula>
        <errorDisplayField>ManagerId</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequiredTitle</fullName>
        <active>false</active>
        <errorConditionFormula>Title =&quot;&quot; &amp;&amp; IsActive=true</errorConditionFormula>
        <errorDisplayField>Title</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Division</fullName>
        <active>false</active>
        <errorConditionFormula>AND(IsActive=true, NOT(OR(Division=&quot;ESSENTRA COMPONENTS DISTRIBUTION&quot;, Division=&quot;ESSENTRA EXTRUSION&quot;,Division=&quot;ESSENTRA FILTER PRODUCTS&quot;,Division=&quot;ESSENTRA HEALTHCARE PACKAGING&quot;,Division=&quot;ESSENTRA PACKAGING SOLUTIONS&quot;,Division=&quot;ESSENTRA POROUS TECHNOLOGIES&quot;,Division=&quot;ESSENTRA SECURING SOLUTION&quot;,Division=&quot;PIPE PROTECTION TECHNOLOGIES&quot;,Division=&quot;SPECIALITY TAPES&quot;,Division=&quot;GROUP&quot;)))</errorConditionFormula>
        <errorDisplayField>Division</errorDisplayField>
        <errorMessage>Only the valid Business Area name has to be entered (in Upper Case) in this field. Please refer to the Business Area object to know the list of valid Business Areas available.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_User_Info</fullName>
        <active>false</active>
        <errorConditionFormula>AND(IsActive=true, OR(Title = &quot;&quot;, Department = &quot;&quot;, CompanyName = &quot;&quot;,ManagerId =&quot;&quot;, Street = &quot;&quot;,City = &quot;&quot;,Country = &quot;&quot;, Phone = &quot;&quot; ))</errorConditionFormula>
        <errorMessage>Please make sure following fields should not be blank : Title, Company, Department, Phone, Street, City, Country and Manager.</errorMessage>
    </validationRules>
</CustomObject>